[package]
name = "khata"
version = "0.1.0"
authors = ["Kushal Das <mail@kushaldas.in>"]
description = "Static blogging tool, Shonku reimplemented."
license = "GPL-3.0-or-later"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
tera = "1"
clap = "2.33.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.8.0"
sha2 = "0.8.0"
hex = "0.4.3"
rss = "1.10.0"
shadow-rs = "0.7"

[dependencies.chrono]
version = "0.4"
features = ["rustc-serialize"]

[build-dependencies]
shadow-rs = "0.7"
